# CV-HM2

./: CMakeLists.txt  README.md  build.sh  instances_default.json
include/: detect.hpp  evaluation.hpp  preprocess.hpp  process.hpp
src/: card_predictor_FINAL.ipynb  cv_detection.cpp  detect.cpp  evaluation.cpp  preprocess.cpp  process.cpp
